# pr_py

./: .gitignore  LICENSE  README.md  _TEST_RUN.py  __init__.py  pyproject.toml
core/: az_reports.py  az_terminal.py
utils/: util.py  util_json.py  util_print.py
