[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pr_py"
version = "0.1.0"
description = "idk"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="azeDevs" }]
dependencies = [wcwidth]

[project.urls]
Homepage = "https://github.com/azedevs/pr_py"
